# dhgame

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  armv5te-nintendo-ds.json  build.rs
.cargo/: config.toml
.helix/: languages.toml
data/: Platform.pxo  Squid.pxo
src/: main.rs
